[package]
name = "wlt-helper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wltsv"

[[bin]]
name = "wltcmd"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
oo7 = { version = "0.6.0", features = ["native_crypto", "tracing"] }
reqwest = { version = "0.13.2", features = ["form", "json"] }
rpassword = "7.5.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus = "5.15.0"
